maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:14: error: not found: type Tuple
def findExit() : Tuple = {
                 ^ShortestPathMaze:21: error: not found: type Tuple
def marquerSol(casee:Tuple, numero:Int) {
                     ^ShortestPathMaze:7: error: not found: value parcourirPath
  parcourirPath();
  ^ShortestPathMaze:17: error: not found: value HasBaggle
      if(HasBaggle())
         ^ShortestPathMaze:28: error: not found: value setHeading
  setHeading(Direction.NORTH);
  ^ShortestPathMaze:34: error: not found: value setHeading
  setHeading(Direction.EAST);
  ^